# infinite-loop

./: .env.default  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  wrangler.jsonc
blog/dspy_intro/: README.md
docs/: DEPLOYMENT.md  banner.html
docs/companion/: 2025-12-01-the-stack.md  2025-12-07-fzf.md  2026-06-09-loopwright.md  2026-06-10-honest-loop.md
docs/goals/: honest-loop.md  loopwright.md
dspy-intro/: README.md
public/temp/: 2026-06-10 - Agentic AI Field Report - LinkedIn-EN.html  2026-06-10 - Agentic AI Standortbestimmung - LinkedIn-DE.html  2026-06-10-agentic-ai-field-report-linkedin-en.md  2026-06-10-agentic-ai-standortbestimmung-linkedin-de.md  index.html
public/tmp/: krankenstand-reform-report.html
src/: App.jsx  index.css
src/components/: PostLayout.jsx
src/pages/: About.jsx  Home.jsx  Impressum.jsx
src/posts/: registry.js
tool-box/: app.py
tool-box/demos/: llm_settings_page.py
tool-box/modules/: openai_settings_ui.py
tool-box/mytools/: llm_settings.py
toolbox/: README.md
toolbox/demos/: doc_storage_settings_page.py  dspy_page.py  llm_settings_page.py  sidebar.py  simple_rag_page.py
toolbox/modules/: active_component_ui.py  cnn_news_crawler_ui.py  db_settings_ui.py  interactive_dspy_demo_ui.py  llm_settings_ui.py  mongo_db_settings_ui.py  send_request_ui.py
toolbox/mytools/: active_component_settings.py  cnn_news_crawler.py  db_settings.py  interactive_dspy_demo.py  llm_settings.py  mongo_db_settings.py  user_settings.py
(+88 files in other folders)
