[tool.poetry]
name = "infinite-loop"
version = "0.1.0"
description = "blog resources for the infinite-loop blog"
authors = ["Andre Ratzenberger <andre.ratzenberger@whiteduck.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
python-dotenv = "^1.0.1"
openai = "^1.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
