[tool.poetry]
package-mode = false
name = "infinite-loop"
version = "0.1.0"
description = "blog resources for the infinite-loop blog"
authors = ["Andre Ratzenberger <andre.ratzenberger@whiteduck.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
streamlit = "^1.34.0"
python-dotenv = "^1.0.1"
openai = "^1.28.0"
pytest = "^8.2.0"
dspy-ai = "^2.4.9"
ipykernel = "^6.29.4"
pip = "^24.0"
install = "^1.3.5"
st-pages = "^0.4.5"
unstructured = "^0.13.7"
llama-index = "^0.10.36"
llama-index-readers-web = "^0.1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
